
2022-05-31  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_check_string): replaced single string cache by an array
	  of caches using the string length as index; allowing much faster lookups
	* codegen.c (chk_field_variable_address): [not working -> disabled] draft
	  for speedup by not checking the same field multiple time

2022-05-30  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* help.c (cobc_print_usage_common_options): document new -std
	  dialect options gcos and gcos-strict
	* reserved.c (default_reserved_words): define words COMP-9,
	  COMP-10, and COMP-15, that are used by the GCOS dialect for
	  floating-point usages

2022-05-15  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y (transform_body): add full features of INSPECT CONVERTING
	  to TRANSFORM statement, adding optional CHARACTERS

2022-05-11  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_emit_inspect): emit reduced cob_inspect_init_converting
	  without cob_inspect_finish for INSPECT CONVERTING / TRANSFORM
	* parser.y: inspect_list renamed to inspect_format_variant

2022-04-08  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (process_translate): add length note also for value clauses
	  which may span multiple lines

2022-04-01  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_translate) [HAVE_8DOT3_FILENAMES]: fixed
	  missing variable definition

2022-03-27  Simon Sobisch <simonsobisch@gnu.org>

	* error.c (cb_verify): use a valid position tree instead of cb_error_node
	  as this is only valid during parsing + codegen state, fixing #821
	* cobc.h: define CB_PENDING and CB_UNFINISHED without cb_error_node
	  as this is only valid during parsing + codegen state
	* tree.c (cb_init_parse_constants), tree.h, cobc.c: renamed
	  from cb_init_constants

2022-03-10  Simon Sobisch <simonsobisch@gnu.org>

	* pplex.l (next_word_is_comment_paragraph_name): extracted from (ppinput)
	* pplex.l (get_word): new function to extract word and use in