@@ -39,6 +39,7 @@ standard-define			0
 
 # Value: int
 tab-width:			8
+indicator-column:		7
 text-column:			72
 # Maximum word-length for COBOL words / Programmer defined words
 # Be aware that GC checks the word length against COB_MAX_WORDLEN
