@@ -28,6 +28,7 @@ standard-define			2
 
 # Value: int
 tab-width:			8
+indicator-column:		7
 text-column:			72
 word-length:			30
 literal-length:			160
