@@ -28,6 +28,7 @@ standard-define			1
 
 # Value: int
 tab-width:			8
+indicator-column:		7
 text-column:			72
 # Maximum word-length for COBOL words / Programmer defined words
 # current max (COB_MAX_WORDLEN): 63
