@@ -28,6 +28,7 @@ standard-define			3
 
 # Value: int
 tab-width:			8
+indicator-column:		7
 text-column:			72
 word-length:			30  # not verified yet
 literal-length:			160 # not verified yet
